--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bodyy{
+background-image: url(./sikorsky.jpg);
+  
+  background-position: center;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+}
+.profile {
+  margin-left: 200px;
+  margin-top: 50px;
+  padding:20px;
+  width:350px;
+  height: 450px;
+  background-color: rgb(0, 0, 0, 0.5);
+  /* border-radius: 10px;   */
+  
+}
+.fname{
+  background: #aaa;
   color: white;
+  text-align: center;
+  width: auto;
+}
+.btn{
+  width: 200px;
+  height: 40px;
+  background: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 400;
+  font-size: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  transition: all 0.4s;
+  margin-left: 250px;
+  margin-top: 300px;
+  border: none;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover{
+  background: white;
+  color: black;
 }
+h2{
+  text-align: center;
+  color: #fff;
+}
+h3{
+  text-align: center;
+  color: #fff;
+}
+.photo{
+  display: block;
+  margin: 10px auto;
+  box-shadow: 3px 4px 7px green;
+}
+.photo:hover{
+  transform: scale(1.25,1)
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+p{
+  font-family: cursive;
+  color: white;
 }
